--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sorting-visualizer",
+  "homepage": "https://kimsternator.github.io/sorting-visualizer/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
